Fix FeatureEngagementTestCase for UI Refresh

This CL fixes the test suite, fixing the test that should pass and
disabling the one for the features not yet implemented.

Bug: 832638
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I2138a74a73b18c40ebdee6b22432541d7bc27a91
Reviewed-on: https://chromium-review.googlesource.com/1012104
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550628}