ios/chrome/browser/ui/tools_menu/reading_list_menu_view_item.mm
@@ -19,8 +19,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #endif
 
 // Accessibility identifier for the text badge on the reading list cell.
-NSString* const kReadingListTextBadgeAccessibilityIdentifier =
-    @"kReadingListTextBadgeAccessibilityIdentifier";
+NSString* const kToolsMenuTextBadgeAccessibilityIdentifier =
+    @"kToolsMenuTextBadgeAccessibilityIdentifier";
 
 namespace {
 // ID for cell reuse
@@ -82,7 +82,7 @@ const NSTimeInterval kTextBadgeAnimationDuration = ios::material::kDuration3;
   self.textBadge = [[TextBadgeView alloc] initWithText:uppercaseText];
   self.textBadge.hidden = YES;
   self.textBadge.accessibilityIdentifier =
-      kReadingListTextBadgeAccessibilityIdentifier;
+      kToolsMenuTextBadgeAccessibilityIdentifier;
   self.textBadge.accessibilityLabel = text;
   [self.contentView addSubview:self.textBadge];
 
